game page created and styling

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Master</title>
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/app.css">
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-center flex-column">
             <h1>Quiz Master</h1>
-            <a class="btn" href="/game.html">Start Quiz</a>
-            <a class="btn" href="/scores.html">View Highscore</a>
+            <a class="btn" href="game.html">Start Quiz</a>
+            <a class="btn" href="scores.html">View Highscore</a>
         </div>
     </div>
 </body>
