--- a/game.html
+++ b/game.html
@@ -10,7 +10,27 @@
   </head>
   <body>
     <div class="container">
-      <div id="game" class="justify-center flex-column">
+      <div id="loader"></div>
+      <div id="game" class="justify-center flex-column hidden">
+        <div id="hud">
+            <div id="hud-item">
+              <p id = "progressText" class="hud-prefix">
+                Question
+              </p>
+              <div id="progressBar">
+                  <div id="progress-bar-full"></div>
+              </div>
+              <h1 class="hud-main-text" id="questionCounter"></h1>
+            </div>
+            <div id="hud-item">
+              <p class="hud-prefix">
+                Score
+              </p>
+              <h1 class="hud-main-text" id="score">
+                0
+              </h1>
+            </div>
+          </div>
         <h2 id="question">What is the answer to this questions?</h2>
         <div class="choice-container">
           <p class="choice-prefix">A</p>
