--- a/game.html
+++ b/game.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Quiz Master - Play</title>
-    <link rel="stylesheet" href="/css/app.css" />
-    <link rel="stylesheet" href="/css/game.css" />
+    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/game.css" />
   </head>
   <body>
     <div class="container">
