--- a/scores.html
+++ b/scores.html
@@ -16,6 +16,6 @@
           <a class="btn" href="/">Go Home</a>
         </div>
       </div>
-    <script src="/js/scores.js"></script>
+    <script src="js/scores.js"></script>
 </body>
 </html>
